# kwokka

./: .coderabbit.yaml  .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  flake.nix  release-plz.toml  rust-toolchain.toml  rustfmt.toml
crates/kwokka/: CHANGELOG.md  Cargo.toml
crates/kwokka-core/: CHANGELOG.md  Cargo.toml  README.md
crates/kwokka-core/src/: generation.rs  lib.rs  namespace.rs
crates/kwokka-core/src/arena/: builder.rs  bump.rs  mod.rs  phase.rs
crates/kwokka-core/src/cancellation/: context.rs  kind.rs  mod.rs  policy.rs
crates/kwokka-core/src/flat/: layout.rs  mod.rs  primitive.rs
crates/kwokka-core/src/generation/: mod.rs  revision.rs
crates/kwokka-core/src/hint/: affinity.rs  mod.rs  scheduling.rs
crates/kwokka-core/src/id/: display.rs  error.rs  generate.rs  layout.rs  mod.rs  namespace.rs  pip.rs  relation.rs
crates/kwokka-core/src/slab/: key.rs  mod.rs  slab.rs
crates/kwokka-ensemble/: CHANGELOG.md  Cargo.toml
crates/kwokka-ensemble/src/: error.rs  lib.rs
crates/kwokka-fs/: CHANGELOG.md  Cargo.toml  README.md
crates/kwokka-fs/src/: lib.rs
crates/kwokka-fs/src/file/: handle.rs  mod.rs
crates/kwokka-fs/tests/: handle.rs  read.rs  vectored.rs  write.rs
crates/kwokka-io/: CHANGELOG.md  Cargo.toml  README.md
crates/kwokka-io/src/: boundary.rs  dispatch.rs  driver.rs  lib.rs
crates/kwokka-io/src/addr/: mod.rs  pack.rs  socket.rs  unix.rs
crates/kwokka-io/src/boundary/: mod.rs  seam.rs
crates/kwokka-io/src/boundary/cancel/: guard.rs  inbox.rs  mod.rs  token.rs
crates/kwokka-io/src/boundary/seam/: cancel.rs  drain.rs  mod.rs  pool.rs  socket.rs  state.rs  waker.rs
crates/kwokka-io/src/buffer/: inflight.rs  mmap.rs  mod.rs  multishot.rs  slot.rs
crates/kwokka-io/src/buffer/multishot/: accept.rs  mod.rs  recv.rs
crates/kwokka-io/src/buffer/oneshot/: inflight.rs  mod.rs
crates/kwokka-io/src/buffer/registration/: buffers.rs  fds.rs  mod.rs
crates/kwokka-io/src/buffer/ring/: abi.rs  memory.rs  mod.rs  pool.rs
crates/kwokka-io/src/buffer/storage/: mmap.rs  mod.rs
crates/kwokka-io/src/capability/: matrix.rs  mod.rs
crates/kwokka-io/src/driver/: backend.rs  dispatch.rs  mod.rs  wake.rs
crates/kwokka-io/src/operation/: completion.rs  mod.rs  request.rs
crates/kwokka-io/src/operation/core/: buffer.rs  mod.rs  msghdr.rs  op.rs  token.rs  vectored.rs
crates/kwokka-io/src/operation/future/: file.rs  mod.rs  msg.rs  provided.rs  socket.rs  vectored.rs  zerocopy.rs
crates/kwokka-io/src/operation/request/: control.rs  fd.rs  mod.rs  net.rs  payload.rs  read.rs  splice.rs  write.rs
crates/kwokka-io/src/uring/: cancel.rs  completion.rs  driver.rs  fixed.rs  linked.rs  mod.rs  msg.rs  submission.rs  wake.rs
crates/kwokka-io/src/uring/backend/: driver.rs  fixed.rs  mod.rs  submission.rs
crates/kwokka-io/src/uring/cqe/: completion.rs  mod.rs  multishot.rs
crates/kwokka-io/src/uring/opcode/: control.rs  io.rs  mod.rs  net.rs  sync.rs  xfer.rs
crates/kwokka-io/src/uring/setup/: detect.rs  flags.rs  mod.rs
crates/kwokka-ir/: CHANGELOG.md  Cargo.toml  README.md
crates/kwokka-ir/src/: error.rs  lib.rs
crates/kwokka-ir/src/conductor/: check.rs  draft.rs  edge.rs  mod.rs  spec.rs  stage.rs
crates/kwokka-ir/src/config/: binding.rs  mod.rs  scalar.rs
crates/kwokka-ir/src/error/: mod.rs
crates/kwokka-ir/src/flat/: header.rs  mod.rs  reader.rs  writer.rs
crates/kwokka-ir/src/node/: blob.rs  mod.rs  tag.rs
crates/kwokka-ir/src/policy/: breaker.rs  kind.rs  limiter.rs  mod.rs  retry.rs  timeout.rs
crates/kwokka-ir/src/registry/: mod.rs  name.rs  ordinal.rs
crates/kwokka-macros/: Cargo.toml  README.md
crates/kwokka-macros/src/: lib.rs
crates/kwokka-macros/src/entry/: expand.rs  mod.rs  parse.rs
crates/kwokka-macros/tests/: entry.rs  ui.rs
crates/kwokka-macros/tests/ui/: affine.rs  legacy.rs  legacy.stderr  parameterized.rs  parameterized.stderr  stealing.rs  synchronous.rs  synchronous.stderr  unknown.rs  unknown.stderr  unscheduled.rs  unscheduled.stderr  unsupported.rs  unsupported.stderr
crates/kwokka-net/: CHANGELOG.md  Cargo.toml  README.md
crates/kwokka-net/src/: lib.rs
crates/kwokka-net/src/tcp/: accept.rs  connect.rs  listener.rs  mod.rs  recv.rs  stream.rs
crates/kwokka-net/src/udp/: mod.rs  socket.rs
crates/kwokka-net/src/unix/: listener.rs  mod.rs  stream.rs
crates/kwokka-net/tests/: accept.rs  connect.rs  eof.rs  multishot.rs  provided.rs  recv.rs  roundtrip.rs  send.rs  stream.rs  udp.rs  ui.rs  unix.rs
crates/kwokka-net/tests/ui/: cap_at_limit.rs  cap_over_limit.rs  cap_over_limit.stderr
crates/kwokka-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/kwokka-runtime/src/: lib.rs
crates/kwokka-runtime/src/runtime/: affine.rs  bootstrap.rs  builder.rs  completion.rs  crew.rs  handle.rs  mod.rs  probe.rs  root.rs  steal.rs  stealing.rs
crates/kwokka-runtime/src/runtime/crew/: affine.rs  kind.rs  mod.rs  stealing.rs
crates/kwokka-runtime/src/runtime/drive/: completion.rs  mod.rs  root.rs  steal.rs  turn.rs
crates/kwokka-runtime/src/scheduler/: dispatch.rs  mod.rs  queue.rs
crates/kwokka-runtime/src/scheduler/affine/: mod.rs  (+4 more)
crates/kwokka-runtime/src/sync/: mod.rs  mpsc.rs
crates/kwokka-runtime/src/task/: children.rs  handle.rs  header.rs  identity.rs  io.rs  lifecycle.rs  mod.rs  scope.rs  sleeping.rs  slot.rs  state.rs  storage.rs  waker.rs
crates/kwokka-runtime/src/timer/: clock.rs  entry.rs  handle.rs  mod.rs  request.rs  sleeping.rs  slot.rs  wheel.rs
crates/kwokka-runtime/src/worker/: cycle.rs  endpoint.rs  frame.rs  inbox.rs  mod.rs  polling.rs  reap.rs  registry.rs  shard.rs  wake.rs
crates/kwokka-runtime/tests/: provided.rs
crates/kwokka/examples/: affine.rs  file_read.rs  scope.rs  sleep.rs  stealing.rs  tcp_echo.rs
crates/kwokka/src/: fs.rs  lib.rs  net.rs  runtime.rs  time.rs
crates/kwokka/src/fs/: mod.rs
crates/kwokka/src/task/: mod.rs
crates/kwokka/src/time/: mod.rs
crates/kwokka/tests/: behavior.rs  facade.rs  socket.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: addr_pack.rs
(+82 files in other folders)
