[package]
name = "kwokka-core"
version = "0.0.1"
description = "foundational types shared across the kwokka workspace"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["async", "runtime", "kwokka"]
categories = ["asynchronous"]

[lints]
workspace = true
