[package]
name = "kwokka-fs"
version = "0.0.1"
description = "asynchronous file I/O for the kwokka runtime"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["async", "file", "fs", "io-uring", "kwokka"]
categories = ["asynchronous", "filesystem"]

[dependencies]
kwokka-io.workspace = true

[dev-dependencies]
kwokka-runtime.workspace = true

[lints]
workspace = true
