[package]
name = "kwokka-fs"
version = "0.0.2"
description = "asynchronous file I/O for the kwokka runtime"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["async", "file", "fs", "io-uring", "kwokka"]
categories = ["asynchronous", "filesystem"]

[dependencies]
kwokka-io.workspace = true

[dev-dependencies]
kwokka-runtime = { path = "../kwokka-runtime" }

[lints]
workspace = true
