[package]
name = "kwokka-macros"
version = "0.0.1"
description = "procedural macros lowering onto the kwokka facade"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["async", "runtime", "macros", "kwokka"]
categories = ["asynchronous", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
kwokka.workspace = true
trybuild.workspace = true

[lints]
workspace = true
