[package]
name = "kwokka-net"
version = "0.0.1"
description = "TCP, UDP, and Unix sockets for the kwokka runtime"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["async", "tcp", "sockets", "net", "kwokka"]
categories = ["asynchronous", "network-programming"]

[dependencies]
kwokka-io.workspace = true

[dev-dependencies]
kwokka-runtime.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["kwokka-io"]
