[package]
name = "kwokka-net"
version = "0.0.2"
description = "TCP networking for the kwokka runtime"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["async", "tcp", "sockets", "net", "kwokka"]
categories = ["asynchronous", "network-programming"]

[dependencies]
kwokka-io.workspace = true

[dev-dependencies]
kwokka-runtime = { path = "../kwokka-runtime" }

[lints]
workspace = true
