[package]
name = "kwokka-runtime"
version = "0.0.1"
description = "scheduler, worker, task, memory, timer, and sync primitives"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["async", "runtime", "scheduler", "kwokka"]
categories = ["asynchronous", "concurrency"]

[features]
steal = ["dep:crossbeam-deque"]

[dependencies]
crossbeam-deque = { workspace = true, optional = true }
kwokka-core.workspace = true
kwokka-io.workspace = true

[dev-dependencies]
loom.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["crossbeam-deque", "kwokka-core", "kwokka-io"]
