[package]
name = "kwokka-runtime"
version = "0.0.1"
description = "scheduler, worker, task, memory, timer, and sync primitives"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["async", "runtime", "scheduler", "kwokka"]
categories = ["asynchronous", "concurrency"]

[features]
# Work-stealing scheduler: cross-worker task migration, steal-request rings, and
# the cross-slab relocate path. Default-off so the simpler affine (thread-per-core)
# build has no dead scheduler code compiled in. Promoted to default once the stealing
# runtime reaches the same reliability tier as the affine runtime.
steal = []

[dependencies]
kwokka-core.workspace = true
kwokka-io.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# CPU affinity for the thread-per-core scheduler: sched_setaffinity has no std
# wrapper. Linux-only behind a cfg target so other platforms drop the dep.
libc.workspace = true

[dev-dependencies]
loom.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["kwokka-core", "kwokka-io"]
